output.log
[dotenv@17.3.1] injecting env (14) from .env -- tip: 🛡️ auth for agents: https://vestauth.com
/home/fsocietly/Codes/Bots/Multi_Bot/grain-bot/bot.js:49
			'🎨 **Marketing Rejimi.**\nKanalga qo'yish uchun rasm va izoh (caption) tashlang.',
			^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at Module._compile (node:internal/modules/cjs/loader:1778:20)
    at Object..js (node:internal/modules/cjs/loader:1936:10)
    at Module.load (node:internal/modules/cjs/loader:1525:32)
    at Module._load (node:internal/modules/cjs/loader:1327:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1548:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (/home/fsocietly/Codes/Bots/Multi_Bot/index.js:5:23)

Node.js v24.13.1
